<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/gradient" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </ImageView>

        <TextView
            android:id="@+id/createAccountText"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/create_account"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/open_sans_bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="160dp"
        android:id="@+id/layoutInput"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_white"
        android:padding="20dp"
        android:orientation="vertical"
        android:elevation="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <TextView
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/open_sans_bold"/>
        <EditText
            android:id="@+id/userSignInEmail"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_mail_black_24dp"
            android:hint="@string/yourmail_email_com"
            app:fontFamily="@font/open_sans"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_mail_black_24dp" />
        <TextView
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fontFamily="@font/open_sans_bold"/>
        <EditText
            android:id="@+id/userSignInPassword"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:hint="******"
            app:fontFamily="@font/open_sans"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp" />
        <Button
            android:id="@+id/signInButton"
            android:textColor="#FFF"
            android:background="@drawable/rec_gradient"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:text="@string/sign_in"
            app:fontFamily="@font/open_sans_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageVIew"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_launcher"
        android:background="@drawable/background_white"
        android:padding="5dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageVIew"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#FFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:fontFamily="@font/open_sans_semibold" />

</RelativeLayout>